Revision history for VMware::vCloud

1.4 DATETAG

  Corrected:
    Removed POD references to VMware::API::LabManager

1.3 2011/06/25

  Corrected:
    Error calling Data::Dumper on _fault()
    Syntax error in META.yml

1.2 2011/06/23

  The server is now properly queried for the API version.
  XML to data structure translation of server responses is now in place.  

  Added:
    api_versions() - Method to check API version supported by server
	
  Improved:
    login() - Now returns a data structure of accessible organizations upon successful login.
  
1.1  2011/06/16

  Initial connection seed from sample code from hosting.com with comments from
  the VMware communities.

   - http://mylhat.com/blog/2009/09/hosting-com-vcloud-express-api-example-in-perl/
   - http://communities.vmware.com/thread/284659

   Added:
     login() - Basic method to get a login token from the server.