@@ -5,6 +5,7 @@ META.yml
 README
 TODO
 examples/login.pl
+examples/org_get.pl
 lib/VMware/vCloud.pm
 t/01-load.t
 t/02-header.t
