@@ -6,6 +6,7 @@ version:      VERSIONTAG
 version_from: lib/VMware/vCloud.pm
 
 requires:
+  Data::Dumper: 0
   LWP: 0
   XML::Simple: 0
 
